--- a/ports/cairo/CMakeLists.txt
+++ b/ports/cairo/CMakeLists.txt
@@ -218,9 +218,9 @@ if(MSVC)
     target_compile_options(cairo PRIVATE
         "/wd4244" "/wd4146" "/wd4312" "/wd4267" "/wd4996" "/wd4311" "/wd4334" "/wd4101"
     )
-    target_compile_options(cairo-gobject PRIVATE
-        "/wd4244" "/wd4146" "/wd4312" "/wd4267" "/wd4996" "/wd4311" "/wd4334" "/wd4101"
-    )
+    #target_compile_options(cairo-gobject PRIVATE
+    #      "/wd4244" "/wd4146" "/wd4312" "/wd4267" "/wd4996" "/wd4311" "/wd4334" "/wd4101"
+    #  )
 endif()
 
 install(TARGETS cairo #cairo-gobject
